--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-username/gitmate.git"
+    "url": "https://github.com/Vaibhav-Pacherwal/GitMate-JS-Library"
   }
 }
